[package]
name = "miner_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
log = "0.4.21"
log4rs = "1.3.0"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
xmlrpc = { version = "0.15.1", features = ["http"] }

